Adding about us

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,4 +8,5 @@ import AboutUs from '../components/aboutUs.astro';
 <Layout title='Welcome to Astro.'>
 	<Navbar />
 	<Header />
+	<AboutUs />
 </Layout>
