Adding Special Menu and working styles

--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -29,7 +29,7 @@ import { images } from '../constants';
 			</li>
 			<li class='relative flex lg:flex-col'>
 				<a
-					href='#menu'
+					href='#specialmenu'
 					class='relative hover:text-selfgrey-50 cursor-pointer'
 				>
           Menu
@@ -45,7 +45,7 @@ import { images } from '../constants';
 			</li>
 			<li class='relative flex lg:flex-col'>
 				<a
-					href='#awards'
+					href='#contact'
 					class='relative hover:text-selfgrey-50 hover:text-red cursor-pointer'
 				>
           Contact
@@ -83,7 +83,7 @@ import { images } from '../constants';
 			</li>
 			<li class='relative flex lg:flex-col'>
 				<a
-					href='#menu'
+					href='#menuu'
 					class='relative hover:text-selfgrey-50 cursor-pointer'
 				>
           Menu
