--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,11 +2,14 @@
 import Layout from '../layouts/Layout.astro'
 import Navbar from '../components/navbar.astro'
 import Header from '../components/header.astro'
-import AboutUs from '../components/aboutUs.astro';
+import AboutUs from '../components/aboutUs.astro'
+import Menu from '../components/menu.astro'
+import Chef from '../components/chef.astro'
 ---
 
 <Layout title='Welcome to Astro.'>
 	<Navbar />
 	<Header />
 	<AboutUs />
+	<Menu />
 </Layout>
