--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -8,10 +8,10 @@ import SubHeading from './subheading.astro';
 		<SubHeading title='Chase the new flavour' />
 		<h1 class='font-Cormorant uppercase text-golden-50 font-bold text-[50px] leading-[70px] lg:text-[60px] lg:leading-[75px] xl:text-[70px] xl:leading-[80px] tracking-[0.04em]'>The Key To Fine Dining</h1>
 		<p class='leading-7 font-Opensans font-normal tracking-[0.04em] text-base capitalize text-white' style={{ margin: '2rem 0' }}>Sit tellus lobortis sed senectus vivamus molestie. Condimentum volutpat morbi facilisis quam scelerisque sapien. Et, penatibus aliquam amet tellus </p>
-		<button type='button' class='custom__button bg-crimson-50 text-selfblack-50 font-Cormorant tracking-[0.04em] leading-7 rounded-[1px] border-none cursor-pointer outline-none py-2 px-6 font-bold text-base lg:text-lg'>Explore Menu</button>
+		<button type='button' class='bg-crimson-50 text-selfblack-50 font-Cormorant tracking-[0.04em] leading-7 rounded-[1px] border-none cursor-pointer outline-none py-2 px-6 font-bold text-base lg:text-lg'>Explore Menu</button>
 	</div>
 
-	<div class='app__wrapper_img w-full lg:ml-8 mt-10 lg:mt-0 flex-1 flex justify-center items-center'>
+	<div class='w-full lg:ml-8 mt-10 lg:mt-0 flex-1 flex justify-center items-center'>
 		<img class='w-full lg:w-[80%]' src={images.welcome} alt='header_img' />
 	</div>
 </div>
