Adding react integration, formating code, and removing caret from dependencies

--- a/src/components/menu.astro
+++ b/src/components/menu.astro
@@ -5,10 +5,10 @@ import MenuItem from './menuItem.astro'
 
 <div class='flex-col bg-selfblack-50 flex justify-center items-center py-16 px-8 md:p-16 lg:py-16 lg:px-8 xl:px-24' id='specialmenu'>
 	<div class='mb-8 text-center'>
-    <div class="flex flex-col items-center" style={{ marginBottom: '1rem' }}>
-      <p class='text-white font-Cormorant font-bold tracking-[0.04em] capitalize leading-7 lg:leading-[67px] text-[19px] sm:text-2xl'>Menu that fits your palatte</p>
-      <img src={images.spoon} alt='spoon_image' class='spoon__img w-11 lg:w-20' />
-    </div>
+		<div class='flex flex-col items-center' style={{ marginBottom: '1rem' }}>
+			<p class='text-white font-Cormorant font-bold tracking-[0.04em] capitalize leading-7 lg:leading-[67px] text-[19px] sm:text-2xl'>Menu that fits your palatte</p>
+			<img src={images.spoon} alt='spoon_image' class='spoon__img w-11 lg:w-20' />
+		</div>
 		<h1 class='text-[30px] leading-[70px] sm:text-[50px] sm:leading-[83.2px] font-Cormorant text-golden-50 capitalize tracking-[0.04em]'>Today&apos;s Special</h1>
 	</div>
 
