Adding intro panel, and navbar style

--- a/src/components/navbar.astro
+++ b/src/components/navbar.astro
@@ -67,7 +67,7 @@ import { images } from '../constants';
 		<Menu />
 	</label>
 	<nav class='absolute top-0 left-0 right-0 z-40 hidden min-h-screen py-24 bg-black peer-checked:block lg:hidden lg:py-0 lg:min-h-0'>
-		<ul class='flex flex-col justify-center items-center lg:items-start lg:flex-row font-semibold tracking-tight text-xl gap-x-8 text-white [&>li>a]:border-b-2 [&>li>a]:border-b-transparent [&>li>a]:transition-all gap-y-8'>
+		<ul class='h-[80vh] grid place-items-center font-semibold tracking-tight text-3xl gap-x-8 text-golden-50 [&>li>a]:border-b-2 [&>li>a]:border-b-transparent [&>li>a]:transition-all gap-y-0'>
 			<li class='flex-1'>
 				<a href='#home' class='relative hover:text-selfgrey-50'>
             Home
@@ -83,7 +83,7 @@ import { images } from '../constants';
 			</li>
 			<li class='relative flex lg:flex-col'>
 				<a
-					href='#menuu'
+					href='#specialmenu'
 					class='relative hover:text-selfgrey-50 cursor-pointer'
 				>
           Menu
