--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import Header from '../components/header.astro'
 import AboutUs from '../components/aboutUs.astro'
 import Menu from '../components/menu.astro'
 import Chef from '../components/chef.astro'
+import Intro from '../components/intro'
 ---
 
 <Layout title='Welcome to Astro.'>
@@ -13,4 +14,5 @@ import Chef from '../components/chef.astro'
 	<AboutUs />
 	<Menu />
 	<Chef />
+	<Intro client:visible />
 </Layout>
