Adding awards sections, and changing sections id

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import AboutUs from '../components/aboutUs.astro'
 import Menu from '../components/menu.astro'
 import Chef from '../components/chef.astro'
 import Intro from '../components/intro'
+import Laurels from '../components/laurels.astro'
 ---
 
 <Layout title='Welcome to Astro.'>
@@ -15,4 +16,5 @@ import Intro from '../components/intro'
 	<Menu />
 	<Chef />
 	<Intro client:visible />
+	<Laurels />
 </Layout>
