--- a/src/components/aboutUs.astro
+++ b/src/components/aboutUs.astro
@@ -15,12 +15,12 @@ import { images } from '../constants'
 			<button type='button' class='custom__button bg-crimson-50 text-selfblack-50 font-Cormorant tracking-[0.04em] leading-7 rounded-[1px] border-none cursor-pointer outline-none py-2 px-6 font-bold text-base lg:text-lg'>Know More</button>
 		</div>
 
-		<div class='app__aboutus-content_knife my-16 lg:my-8 mx-16 flex justify-center items-center'>
+		<div class='my-16 lg:my-8 mx-16 flex justify-center items-center'>
 			<img class='h-[660px]' src={images.knife} alt='about_knife' />
 		</div>
 
-		<div class='app__aboutus-content_history flex flex-1 justify-start items-start flex-col text-left'>
-			<h1 class='headtext__cormorant text-[45px] leading-[70px] sm:text-[64px] sm:leading-[83.2px] font-Cormorant text-golden-50 capitalize tracking-[0.04em]'>Our History</h1>
+		<div class='flex flex-1 justify-start items-start flex-col text-left'>
+			<h1 class='text-[45px] leading-[70px] sm:text-[64px] sm:leading-[83.2px] font-Cormorant text-golden-50 capitalize tracking-[0.04em]'>Our History</h1>
 			<img src={images.spoon} alt='about_spoon' class='spoon__img w-11 lg:w-20' />
 			<p class='p__opensans leading-7 font-Opensans font-normal tracking-[0.04em] text-base capitalize my-8 text-selfgray-50'>Adipiscing tempus ullamcorper lobortis odio tellus arcu volutpat. Risus placerat morbi volutpat habitasse interdum mi aliquam In sed odio nec aliquet.</p>
 			<button type='button' class='custom__button bg-crimson-50 text-selfblack-50 font-Cormorant tracking-[0.04em] leading-7 rounded-[1px] border-none cursor-pointer outline-none py-2 px-6 font-bold text-base lg:text-lg'>Know More</button>
