--- a/src/components/menu.astro
+++ b/src/components/menu.astro
@@ -3,8 +3,8 @@ import { data, images } from '../constants'
 import MenuItem from './menuItem.astro'
 ---
 
-<div class='flex-col bg-selfblack-50 flex justify-center items-center py-16 px-8 md:p-16 lg:py-16 lg:px-8 xl:px-24' id='specialmenu'>
-	<div class='mb-8 text-center'>
+<div class='flex-col bg-selfblack-50 flex justify-center items-center py-16 px-8 md:p-16 lg:py-16 lg:px-8 xl:px-24'>
+	<div class='mb-8 text-center' id='specialmenu'>
 		<div class='flex flex-col items-center' style={{ marginBottom: '1rem' }}>
 			<p class='text-white font-Cormorant font-bold tracking-[0.04em] capitalize leading-7 lg:leading-[67px] text-[19px] sm:text-2xl'>Menu that fits your palatte</p>
 			<img src={images.spoon} alt='spoon_image' class='spoon__img w-11 lg:w-20' />
