Adding title, description and logo to head project

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ import Intro from '../components/intro'
 import Laurels from '../components/laurels.astro'
 ---
 
-<Layout title='Welcome to Astro.'>
+<Layout title='Gericht' description='Beautiful Restaurant Website'>
 	<Navbar />
 	<Header />
 	<AboutUs />
