--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import Chef from '../components/chef.astro'
 import Intro from '../components/intro'
 import Laurels from '../components/laurels.astro'
 import Gallery from '../components/gallery'
+import Findus from '../components/findus.astro'
 ---
 
 <Layout title='Gericht' description='Beautiful Restaurant Website'>
@@ -19,4 +20,5 @@ import Gallery from '../components/gallery'
 	<Intro client:visible />
 	<Laurels />
 	<Gallery client:visible />
+	<Findus />
 </Layout>
