removing class and formatting code

--- a/src/components/aboutUs.astro
+++ b/src/components/aboutUs.astro
@@ -8,11 +8,11 @@ import { images } from '../constants'
 	</div>
 
 	<div class='flex-col lg:flex-row z-20 w-full flex justify-center items-center'>
-		<div class='app__aboutus-content_about flex flex-1 justify-end flex-col items-end text-right'>
-			<h1 class='headtext__cormorant text-[45px] leading-[70px] sm:text-[64px] sm:leading-[83.2px] font-Cormorant text-golden-50 capitalize tracking-[0.04em]'>About Us</h1>
+		<div class='flex flex-1 justify-end flex-col items-end text-right'>
+			<h1 class='text-[45px] leading-[70px] sm:text-[64px] sm:leading-[83.2px] font-Cormorant text-golden-50 capitalize tracking-[0.04em]'>About Us</h1>
 			<img src={images.spoon} alt='about_spoon' class='spoon__img w-11 lg:w-20' />
 			<p class='leading-7 font-Opensans font-normal tracking-[0.04em] text-base capitalize my-8 text-selfgray-50'>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quis pharetra adipiscing ultrices vulputate posuere tristique. In sed odio nec aliquet eu proin mauris et.</p>
-			<button type='button' class='custom__button bg-crimson-50 text-selfblack-50 font-Cormorant tracking-[0.04em] leading-7 rounded-[1px] border-none cursor-pointer outline-none py-2 px-6 font-bold text-base lg:text-lg'>Know More</button>
+			<button type='button' class='bg-crimson-50 text-selfblack-50 font-Cormorant tracking-[0.04em] leading-7 rounded-[1px] border-none cursor-pointer outline-none py-2 px-6 font-bold text-base lg:text-lg'>Know More</button>
 		</div>
 
 		<div class='my-16 lg:my-8 mx-16 flex justify-center items-center'>
