--- a/src/components/chef.astro
+++ b/src/components/chef.astro
@@ -7,7 +7,7 @@ import SubHeading from './subheading.astro'
 	<div class='flex w-full justify-start mr-2'>
 		<img class='lg:w-[80%] w-full' src={images.chef} alt='chef_image' />
 	</div>
-	<div class='app__wrapper_info flex w-full justify-center mt-10 items-start flex-col'>
+	<div class='flex w-full justify-center mt-10 items-start flex-col'>
 		<SubHeading title="Chef's word" />
 		<h1 class='text-[45px] leading-[70px] sm:text-[64px] sm:leading-[83.2px] font-Cormorant text-golden-50 capitalize tracking-[0.04em]'>What we believe in</h1>
 
@@ -19,8 +19,8 @@ import SubHeading from './subheading.astro'
 			<p class='leading-7 font-Opensans font-normal tracking-[0.04em] text-sm capitalize text-justify text-selfgray-50'> auctor sit iaculis in arcu. Vulputate nulla lobortis mauris eget sit. Nulla scelerisque scelerisque congue ac consequat, aliquam molestie lectus eu. Congue iaculis integer curabitur semper sit nunc. </p>
 		</div>
 
-		<div class='app__chef-sign w-full mt-6'>
-			<p class='font-Cormorant font-normal text-[32px] capitalize leading-[41.6px] tracking-[0.04em] text-golden-50 '>Kevin Luo</p>
+		<div class='w-full mt-6'>
+			<p class='font-Cormorant font-normal text-[32px] capitalize leading-[41.6px] tracking-[0.04em] text-golden-50'>Kevin Luo</p>
 			<p class='leading-7 font-Opensans font-normal tracking-[0.04em] text-base capitalize my-4 text-selfgray-50'>Chef & Founder</p>
 			<img class='w-[250px] mt-12' src={images.sign} alt='sign_image' />
 		</div>
