--- a/src/components/laurels.astro
+++ b/src/components/laurels.astro
@@ -9,7 +9,7 @@ import AwardCard from './awardcard.astro';
 		<SubHeading title='Awards & recognition' />
 		<h1 class='text-[45px] leading-[70px] sm:text-[64px] sm:leading-[83.2px] font-Cormorant text-golden-50 capitalize tracking-[0.04em]'>Our Laurels</h1>
 
-		<div class='app__laurels_awards flex justify-start items-center mt-6 flex-col'>
+		<div class=' flex justify-start items-center mt-6 flex-col'>
 			{data.awards.map((award) => <AwardCard award={award} key={award.title} />)}
 		</div>
 	</div>
