Adding footer section

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,7 @@ import Intro from '../components/intro'
 import Laurels from '../components/laurels.astro'
 import Gallery from '../components/gallery'
 import Findus from '../components/findus.astro'
+import Footer from '../components/footer.astro'
 ---
 
 <Layout title='Gericht' description='Beautiful Restaurant Website'>
@@ -21,4 +22,5 @@ import Findus from '../components/findus.astro'
 	<Laurels />
 	<Gallery client:visible />
 	<Findus />
+	<Footer />
 </Layout>
