Removing class, working styles and adding optimized bg

--- a/src/components/findus.astro
+++ b/src/components/findus.astro
@@ -3,13 +3,13 @@ import SubHeading from '../components/subheading.astro'
 import { images } from '../constants';
 ---
 
-<div class='app__wrapper flex flex-col lg:flex-row justify-between items-center min-h-screen py-16 px-8 md:p-16 lg:py-16 lg:px-24' id='contact'>
+<div class='flex flex-col lg:flex-row justify-between items-center min-h-screen py-16 px-8 md:p-16 lg:py-16 lg:px-24' id='contact'>
 	<div class='flex flex-1 justify-center items-start flex-col w-full'>
 		<SubHeading title='Contact' />
-		<h1 class='text-[45px] leading-[70px] sm:text-[64px] sm:leading-[83.2px] font-Cormorant text-golden-50 capitalize tracking-[0.04em]' style={{ marginBottom: '3rem' }}>Find Us</h1>
+		<h1 class='text-[45px] leading-[70px] sm:text-[64px] sm:leading-[83.2px] font-Cormorant text-golden-50 capitalize tracking-[0.04em]'>Find Us</h1>
 		<div>
 			<p class='leading-7 font-Opensans font-normal tracking-[0.04em] text-base capitalize my-8 text-selfgray-50'>Lane Ends Bungalow, Whatcroft Hall Lane, Rudheath, CW9 75G</p>
-			<p class='font-Cormorant font-normal text-[32px] capitalize leading-[41.6px] tracking-[0.04em] text-golden-50' style={{ color: '#DCCA87', margin: '2rem 0' }}>Opening Hours</p>
+			<p class='font-Cormorant font-normal text-[32px] capitalize leading-[41.6px] tracking-[0.04em] text-golden-50' style={{ color: '#DCCA87' }}>Opening Hours</p>
 			<p class='leading-7 font-Opensans font-normal tracking-[0.04em] text-base capitalize my-8 text-selfgray-50'>Mon - Fri: 10:00 am - 02:00 am</p>
 			<p class='leading-7 font-Opensans font-normal tracking-[0.04em] text-base capitalize my-8 text-selfgray-50'>Sat - Sun: 10:00 am - 03:00 am</p>
 		</div>
