--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,6 +31,6 @@ const { title, description } = Astro.props as Props;
 <style>
 	* {
 		scroll-behavior: smooth !important;
-		background-image: url('../assets/bg.png');
+		background-image: url('../assets/bg.webp');
 	}
 </style>
